# godot-native-example

./: .gitignore  CMakeLists.txt  README.md  debug.bat  debug.sh
.github/workflows/: build.yml
app/: example.gd  project.godot
app/addons/example/: example.gdnlib  example.gdns
ci/: ci.bash
lib/godot-cpp/: conandata.yml  conanfile.py
src/: Godot.cpp
